--- a/Poryecot/index.html
+++ b/Poryecot/index.html
@@ -26,7 +26,7 @@
         
       <li><a href="Subsistemas/Clientes.html">Clientes</a></li>
       <li><a href="Subsistemas/Equipo.html">Equipos</a></li>
-      <li><a href="Subsistemas/Dignostico.html">Diagnóstico y Cotización</a></li>
+      <li><a href="Subsistemas/Diagnostico.html">Diagnóstico y Cotización</a></li>
       <li><a href="Subsistemas/Ordenes.html">Órdenes de Servicio</a></li>
       <li><a href="Subsistemas/Catalogo.html">Catálogo</a></li>
       <li><a href="Subsistemas/Inventario.html">Inventario</a></li>
