--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
+    <h1>Poryecto Integrador: RepairSuit</h1>
 
     <h1>Sistema de Gestión de Taller de Laptops (SGTL)</h1>
     <p>El SGTL es un sistema diseñado para optimizar la operación de un taller de reparación de laptops. Administra de forma centralizada las áreas clave del negocio: Clientes, Equipos, Diagnóstico y Cotización, Órdenes de Servicio, Catálogo, Inventario, Ventas, Pagos & Facturación, Garantías, Marketing, Personal y Proveedores.</p>
@@ -15,7 +16,7 @@
     <p>En los talleres de reparación suelen existir fallas de organización y trazabilidad: diagnósticos y cotizaciones dispersos, seguimiento manual de órdenes, control limitado de inventario, pagos sin conciliación y poca visibilidad del desempeño (ventas, rotación de refacciones, tiempos de reparación y garantías). Esto genera respuestas lentas, costos ocultos y pérdida de confianza del cliente.</p>
     
     <h1>Objetivo del proyecto</h1>
-    <p>Sistematizar los procesos de recepción, diagnóstico, reparación y entrega mediante un sistema digital que integre inventario, catálogo y finanzas. El objetivo es agilizar el flujo de Órdenes de Servicio de punta a punta, mejorar la precisión de cotizaciones y cobros, y habilitar análisis de ventas y métricas operativas para la toma de decisiones.</p>
+    <p>Sistematizar los procesos de recepción, diagnóstico, reparación y entrega mediante un sistema web que integre inventario, catálogo y finanzas. El objetivo es agilizar el flujo de Órdenes de Servicio de punta a punta, mejorar la precisión de cotizaciones y cobros, y habilitar análisis de ventas y métricas operativas para la toma de decisiones.</p>
     
     <h1>Subsistemas del proyecto</h1>
     <p>El sistema se fragmentó empleando la estrategia de divide y vencerás, identificando módulos independientes que se integran fácilmente en una solución completa.</p>
