--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="Style/Style.css">
 </head>
 <body>
-    <h1>Poryecto Integrador: RepairSuit</h1>
+    <h1>Poryecto Integrador: RepairSuite</h1>
 
     <h1>Sistema de Gestión de Taller de Laptops (SGTL)</h1>
     <p>El SGTL es un sistema diseñado para optimizar la operación de un taller de reparación de laptops. Administra de forma centralizada las áreas clave del negocio: Clientes, Equipos, Diagnóstico y Cotización, Órdenes de Servicio, Catálogo, Inventario, Ventas, Pagos & Facturación, Garantías, Marketing, Personal y Proveedores.</p>
