--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>En los talleres de reparación suelen existir fallas de organización y trazabilidad: diagnósticos y cotizaciones dispersos, seguimiento manual de órdenes, control limitado de inventario, pagos sin conciliación y poca visibilidad del desempeño (ventas, rotación de refacciones, tiempos de reparación y garantías). Esto genera respuestas lentas, costos ocultos y pérdida de confianza del cliente.</p>
     
     <h1>Objetivo del proyecto</h1>
-    <p>Sistematizar los procesos de recepción, diagnóstico, reparación y entrega mediante un sistema web que integre inventario, catálogo y finanzas, con el fin de optimizar el flujo de Órdenes de Servicio, mejorar la precisión de cotizaciones y cobros, además de generar métricas operativas para apoyar la toma de decisiones.</p>
+    <p>Sistematizar los procesos de recepción, diagnóstico, reparación y entrega mediante el desarrollo de un sistema web que integre inventario, catálogo y finanzas, con el propósito de optimizar el flujo de Órdenes de Servicio, mejorar la precisión de cotizaciones y cobros, y generar métricas operativas para la toma de decisiones, en la empresa JLaboratories.</p>
     
     <h1>Subsistemas del proyecto</h1>
     <p>El sistema se fragmentó empleando la estrategia de divide y vencerás, identificando módulos independientes que se integran fácilmente en una solución completa.</p>
